--- a/BookFaceApp/wwwroot/css/TestCss.css
+++ b/BookFaceApp/wwwroot/css/TestCss.css
@@ -1,233 +1,217 @@
 ﻿body {
-    color: #797979;
-    background: #ddd;
-    font-family: 'Open Sans', sans-serif;
-    padding: 0px !important;
-    margin: 0px !important;
-    font-size: 13px;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
+    background-color: #f9fafb;
     margin-top: 20px;
 }
 
-.panel-body {
-    border-width: 10px;
-    background: #fff;
+.profile-page .profile-header {
+    box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
+    border: 1px solid #f2f4f9;
 }
 
-.cover-photo {
-    position: relative;
+    .profile-page .profile-header .cover {
+        position: relative;
+        border-radius: .25rem .25rem 0 0;
+    }
+
+
+        .profile-page .profile-header .cover figure {
+            margin-bottom: 0;
+        }
+
+@media (max-width: 767px) {
+    .profile-page .profile-header .cover figure {
+        height: 110px;
+        overflow: hidden;
+    }
 }
 
-a:hover {
-    text-decoration: none;
+@media (min-width: 2400px) {
+    .profile-page .profile-header .cover figure {
+        height: 280px;
+        overflow: hidden;
+    }
 }
 
-.fb-timeline-img img {
+.profile-page .profile-header .cover figure img {
+    border-radius: .25rem .25rem 0 0;
     width: 100%;
-    height: auto;
-    max-height: 280px;
-    border-radius: 4px 4px 0 0;
-    -webkit-border-radius: 4px 4px 0 0;
 }
 
-.profile-thumb img {
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    margin-top: -90px;
-    border: 3px solid #fff;
+@media (max-width: 767px) {
+    .profile-page .profile-header .cover figure img {
+        -webkit-transform: scale(2);
+        transform: scale(2);
+        margin-top: 15px;
+    }
 }
 
-.profile-info .panel-footer ul li a {
-    color: #7a7a7a;
+@media (min-width: 2400px) {
+    .profile-page .profile-header .cover figure img {
+        margin-top: -55px;
+    }
 }
 
-.profile-thumb {
-    float: left;
-    position: relative;
-}
-
-.p-text-area, .p-text-area:focus {
-    border: none;
-    font-weight: 300;
-    box-shadow: none;
-    color: #c3c3c3;
-    font-size: 16px;
-}
-
-
-.fb-user-mail {
-    margin: 10px 0 0 20px;
-    display: inline-block;
-}
-
-
-.fb-name {
-    bottom: 5px;
-    left: 175px;
+.profile-page .profile-header .cover .gray-shade {
     position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: linear-gradient(rgba(255, 255, 255, 0.1), #fff 99%);
 }
 
-    .fb-name h2 a {
-        color: #FFFFFF;
-        text-rendering: optimizelegibility;
-        text-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
-        font-size: 25px;
-    }
-
-.fb-user-thumb {
-    float: left;
-    width: 70px;
-    margin-right: 15px;
+.profile-page .profile-header .cover .cover-body {
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    padding: 0 20px;
 }
 
-    .fb-user-thumb img {
-        width: 70px;
-        height: 70px;
+    .profile-page .profile-header .cover .cover-body .profile-pic {
         border-radius: 50%;
-        -webkit-border-radius: 50%;
+        width: 100px;
     }
 
-
-.fb-user-details h3 {
-    margin: 15px 0 0;
-    font-size: 18px;
-    font-weight: 300;
-}
-
-.fb-user-details p {
-    color: #c3c3c3;
-}
-
-
-.fb-user-status {
-    padding: 10px 0;
-    line-height: 20px;
-}
-
-.fb-time-action {
-    padding: 15px 0;
-}
-
-
-.fb-border {
-    border-top: 1px solid #ebeef5;
-}
-
-.fb-time-action span, .fb-time-action a, .fb-time-action form {
-    margin-right: 5px;
-}
-
-.fb-time-action a, .fb-time-action form {
-    color: #2972a1;
-}
-
-    .fb-time-action a:hover. .fb-time-action form:hover {
-        text-decoration: underline;
+@media (max-width: 767px) {
+    .profile-page .profile-header .cover .cover-body .profile-pic {
+        width: 70px;
     }
-
-.fb-time-action span {
-    color: #5a5a5a;
 }
 
-.fb-status-container, .fb-comments li {
-    margin: 0 -15px 0 -15px;
-    padding: 0 15px;
+.profile-page .profile-header .cover .cover-body .profile-name {
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 17px;
 }
 
-.fb-gray-bg {
-    background: #f6f6f6;
-}
-
-.fb-comments li {
-    border-top: 1px solid #ebeef5;
+.profile-page .profile-header .header-links {
     padding: 15px;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    background: #fff;
+    border-radius: 0 0 .25rem .25rem;
 }
 
-.fb-comments .cmt-thumb {
-    width: 50px;
-    float: left;
-    margin-right: 15px;
-}
-
-    .fb-comments .cmt-thumb img {
-        width: 50px;
+    .profile-page .profile-header .header-links ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
     }
 
-.fb-comments .cmt-details {
-    padding-top: 5px;
-}
-
-
-    .fb-comments .cmt-details a {
-        font-size: 14px;
-        font-weight: bold;
-    }
-
-        .fb-comments .cmt-details a.like-link {
-            font-size: 12px;
-            font-weight: normal;
+        .profile-page .profile-header .header-links ul li a {
+            color: #000;
+            -webkit-transition: all .2s ease;
+            transition: all .2s ease;
         }
 
-.cmt-form {
-    display: inline-block;
-    width: 90%;
-}
-
-    .cmt-form textarea {
-        height: 50px;
-        line-height: 35px;
-    }
-
-.fb-timeliner h2 {
-    background: #828283;
-    color: #fff;
-    margin-top: 0;
-    padding: 10px 15px;
-    font-size: 16px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    font-weight: 300;
-}
-
-.fb-timeliner ul {
-    margin-left: 15px;
-    margin-bottom: 20px;
-    list-style-type: none;
-}
-
-.fb-comments {
-    list-style-type: none;
-}
-
-.fb-timeliner ul li {
-    margin-bottom: 3px;
-}
-
-    .fb-timeliner ul li a {
-        color: #999797;
-        border-left: 4px solid #d3d7dd;
-        padding-left: 10px;
-        padding-top: 3px;
-        padding-bottom: 3px;
-        display: block;
-    }
-
-        .fb-timeliner ul li a:hover {
-            color: #999797;
-            border-left: 4px solid #b1b1b1;
-            padding-left: 10px;
+        .profile-page .profile-header .header-links ul li:hover,
+        .profile-page .profile-header .header-links ul li.active {
+            color: #727cf5;
         }
 
-    .fb-timeliner ul li.active a {
-        color: #7a7a7a;
-        border-left: 4px solid #7a7a7a;
-        padding-left: 10px;
+            .profile-page .profile-header .header-links ul li:hover a,
+            .profile-page .profile-header .header-links ul li.active a {
+                color: #727cf5;
+            }
+
+.profile-page .profile-body .left-wrapper .social-links a {
+    width: 30px;
+    height: 30px;
+}
+
+.profile-page .profile-body .right-wrapper .latest-photos > .row {
+    margin-right: 0;
+    margin-left: 0;
+}
+
+    .profile-page .profile-body .right-wrapper .latest-photos > .row > div {
+        padding-left: 3px;
+        padding-right: 3px;
     }
 
-.recent-highlight {
-    background: #FF6C60 !important;
+        .profile-page .profile-body .right-wrapper .latest-photos > .row > div figure {
+            -webkit-transition: all .3s ease-in-out;
+            transition: all .3s ease-in-out;
+            margin-bottom: 6px;
+        }
+
+            .profile-page .profile-body .right-wrapper .latest-photos > .row > div figure:hover {
+                -webkit-transform: scale(1.06);
+                transform: scale(1.06);
+            }
+
+            .profile-page .profile-body .right-wrapper .latest-photos > .row > div figure img {
+                border-radius: .25rem;
+            }
+
+.rtl .profile-page .profile-header .cover .cover-body .profile-name {
+    margin-left: 0;
+    margin-right: 17px;
+}
+
+.img-xs {
+    width: 37px;
+    height: 37px;
+}
+
+.rounded-circle {
+    border-radius: 50% !important;
+}
+
+img {
+    vertical-align: middle;
+    border-style: none;
+}
+
+.card-header:first-child {
+    border-radius: 0 0 0 0;
+}
+
+.card-header {
+    padding: 0.875rem 1.5rem;
+    margin-bottom: 0;
+    background-color: rgba(0, 0, 0, 0);
+    border-bottom: 1px solid #f2f4f9;
+}
+
+.card-footer:last-child {
+    border-radius: 0 0 0 0;
+}
+
+.card-footer {
+    padding: 0.875rem 1.5rem;
+    background-color: rgba(0, 0, 0, 0);
+    border-top: 1px solid #f2f4f9;
+}
+
+.grid-margin {
+    margin-bottom: 1rem;
+}
+
+.card {
+    box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
+    -webkit-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
+    -moz-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
+    -ms-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
+}
+
+.rounded {
+    border-radius: 0.25rem !important;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #f2f4f9;
+    border-radius: 0.25rem;
 }
