--- a/BookFaceApp/Views/Shared/_LoginPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 			<a class="nav-link text-dark" asp-area="" asp-controller="Request" asp-action="All">Requests</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="MyProfile">@User.Identity.Name</a>
+			<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="MyProfile">@User!.Identity!.Name</a>
 		</li>
 		<li class="nav-item">
 			<form class="form-inline" asp-controller="User" asp-action="Logout" asp-route-id="@UserManager.GetUserId(User)">
