--- a/BookFaceApp/Views/Shared/_LoginPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_LoginPartial.cshtml
@@ -4,6 +4,12 @@
 <ul class="navbar-nav">
 	@if (SignInManager.IsSignedIn(User))
 	{
+		@if (User.IsInRole("Administrator"))
+		{
+			<li class="nav-item">
+				<a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
+			</li>
+		}
 		<li class="nav-item">
 			<a class="nav-link text-dark" asp-area="" asp-controller="Request" asp-action="All">Requests</a>
 		</li>
