--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -7,9 +7,11 @@
 @using BookFaceApp.Core.Extensions
 @using BookFaceApp.Core.Models
 @using BookFaceApp.Core.Models.User
+@using BookFaceApp.Core.Models.Role
 @using BookFaceApp.Core.Models.Group
 @using BookFaceApp.Core.Models.Profile
 @using BookFaceApp.Core.Models.Comment
 @using BookFaceApp.Core.Models.Publication
 @using BookFaceApp.Infrastructure.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Identity.CustomTagHelpers.*, Identity
