--- a/BookFaceApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,19 +1,6 @@
 ﻿@using BookFaceApp
 @using Microsoft.AspNetCore.Identity
-@using System.Security.Claims
-@using BookFaceApp.Models
-@using BookFaceApp.Extensions
-@using BookFaceApp.Core.Contracts
-@using BookFaceApp.Core.Services
-@using BookFaceApp.Core.Constants
-@using BookFaceApp.Core.Extensions
-@using BookFaceApp.Core.Models
-@using BookFaceApp.Core.Models.User
 @using BookFaceApp.Core.Models.Role
-@using BookFaceApp.Core.Models.Group
-@using BookFaceApp.Core.Models.Profile
-@using BookFaceApp.Core.Models.Comment
-@using BookFaceApp.Core.Models.Publication
 @using BookFaceApp.Infrastructure.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper Identity.CustomTagHelpers.*, Identity
+@addTagHelper BookFaceApp.Areas.Admin.CustomTagHelpers.*, BookFaceApp
