--- a/BookFaceApp/Views/Shared/_LoginPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_LoginPartial.cshtml
@@ -7,12 +7,12 @@
         @if (User.IsInRole("Administrator"))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Admin" asp-action="Roles">Roles</a>
+                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Role" asp-action="All">Roles</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Request" asp-action="All">Requests</a>
             </li>
         }
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Request" asp-action="All">Requests</a>
-        </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="MyProfile">@User!.Identity!.Name</a>
         </li>
